Bug 20441 - There is a misprint in the spec for cairo_pattern_set_filter() function
Summary: There is a misprint in the spec for cairo_pattern_set_filter() function
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.8.6
Hardware: All All
: low minor
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-02 23:42 UTC by Truc Truong
Modified: 2009-06-03 12:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Truc Truong 2009-03-02 23:42:27 UTC
There is a misprint in the spec for cairo_pattern_set_filter() function. It is just a minor misprint, but it should be fixed to let the spec more clearer:

In the spec for cairo_pattern_set_filter(), the standard states:
cairo_set_source_surface (cr, image, x, y);
cairo_pattern_set_filter (cairo_get_source (cr), %CAIRO_FILTER_NEAREST);

Remove the extra character as follows:
cairo_set_source_surface (cr, image, x, y);
cairo_pattern_set_filter (cairo_get_source (cr), CAIRO_FILTER_NEAREST);

Please, give us your decision.

Thank you very much for your time.
Comment 1 Chris Wilson 2009-06-03 12:18:48 UTC
Fixed, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.