[pattern] Typo in document

Remove extraneous markup from program-listing.

https://bugs.freedesktop.org/show_bug.cgi?id=20441